--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,8 @@
     "com.unity.cinemachine": "2.2.9",
     "com.unity.collab-proxy": "1.2.15",
     "com.unity.package-manager-ui": "2.0.7",
+    "com.unity.postprocessing": "2.1.7",
+    "com.unity.probuilder": "4.1.0",
     "com.unity.purchasing": "2.0.3",
     "com.unity.textmeshpro": "1.4.1",
     "com.unity.modules.ai": "1.0.0",
